# BMF

./: .gitignore  AngularCoef.py  AngularCoefExtraction.ipynb  AngularCoefficient.ipynb  BMFUtil.py  BackgroundVDM.py  BinMCData.ipynb  BinMCData.py  BinRealData.py  BootstrappingResampling.py  CleanRealData.cc  DenoisingUNet.py  DenoisingUNetModels.py  E906LH2Data.ipynb  E906VAE.ipynb  Example1DModels.py  ExampleVAE.py  FastSim.ipynb  Fit3D.py  FitHist.h  GAN.py  GDOpt.py  GaussUtil.py  GaussianExample.ipynb  GaussianExample.py  GaussianExample1.py  GaussianExample2D.ipynb  GaussianVAEModels.py  GenerativeWeights.py  GenerativeWeightsModels.py  MakeBinnedData.cc  MakeTree.h  MakeUNetData.cc  MakeUNetData.py  MakeVAEData.cc  Model.py  NeuralPositiveReweighting.ipynb  Optimizer.ipynb  Optimizer.py  ParamVAE.py  (+36 more)
APS-DNP-2023/: APS-DNP-abstract.tex
DOE-proposal/: DOE-proposal-dinupa.tex  refs.bib
GaussianExample/: CreateTree.cc  MakeBinnedGaussianData.py
OSG/: utorch.def
Tufts-ML2023/: Tufts-ML2023-abstract.tex
abstract/: abstract.tex
code/: AngularCoef.py  Model.py  OccuD1.py  Plots.py  makeData.py  simple.py
create-hist/: MakeHist.h  MakeUNetData.cc  SimpleTree.py  SplitTree.py
data-sets/: MakeHist.hh  MakeTree.hh  MakeUNetData.cc  README.md  SaveTensor.py  SimpleTree.py  SplitTree.py
e906_mc_data/: E906MC.py  E906_Messi_MC_Fit.ipynb  E906_Messi_MC_to_HDF.ipynb  MakeData.cc  (+5 more)
src/: CMakeLists.txt  CleanTree.cc  CleanTree.hh  CompareRealMC.hh  LinkDef.hh  data_for_reweighting.py  reweighting_mc.cc  reweighting_mc.hh  reweighting_plots.cc  reweighting_plots.hh
(+45 files in other folders)
